--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,25 @@
+---
+import { getCollection } from "astro:content";
+import type { CollectionEntry } from "astro:content";
+import { capitalize } from "../utilis";
+
+const contact: string[] = ["Email", "Twitter", "Facebook", "Instagram"];
+
+const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
+
+const tags: string[] = allBlogArticles.flatMap(
+  (article: any) => article.data.tags
+);
+
+const uniqueTag: string[] = [...new Set(tags)];
+---
+
 <footer class="bg-indigo-900 text-white">
   <div class="container mx-auto mt-10 max-w-screen-xl px-8">
     <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-4">
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">About</h3>
-        <p class="text-white text-sm">
+        <p class="text-white text-base">
           TechPeople is a blog for tech enthusiasts. We publish articles,
           stories and tutorials about the latest technology trends and
           advancements.
@@ -12,50 +28,25 @@
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">Categories</h3>
         <ul class="text-white text-sm">
-          <li class="mb-2">
-            <a href="#">Tech</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Programming</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Gadgets</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Hardware</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Software</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">VR</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Smartphones</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Cameras</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Drones</a>
-          </li>
+          {
+            uniqueTag.map((tag) => (
+              <li class="mb-2 text-base">
+                <a href={"/articgles/tag/" + tag}>{capitalize(tag)}</a>
+              </li>
+            ))
+          }
         </ul>
       </div>
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">Contact</h3>
         <ul class="text-white text-sm">
-          <li class="mb-2">
-            <a href="#">Email</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Twitter</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Facebook</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Instagram</a>
-          </li>
+          {
+            contact.map((item) => (
+              <li class="mb-2">
+                <a href="#">{item}</a>
+              </li>
+            ))
+          }
         </ul>
       </div>
     </div>
